--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="topnav" id="myTopnav">
   <a href="index.html" class="active">Home</a>
   <a href="synopsis.html">Synopsis</a>
-  <a href="#production.html">Production</a>
-  <a href="socialmedia.html">Social media</a>
+  <a href="production.html">Production</a>
+  <a href="watchpage.html">Watch</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
