--- a/watchpage.html
+++ b/watchpage.html
@@ -12,7 +12,7 @@
   <body>
     <div class="close">
       <a href="index.html">
-      <img src="images/closeicon.jpeg" alt="close" class="closing">
+      <img src="images/closeyellow.jpeg" alt="close" class="closing">
       </a>
     </div>
 <h1> INTO THE SUN </h1>
