--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ function myFunction() {
 }
 </script>
     <div class="film">
-      <img src="images/couds.jpeg" alt="Sun" class="center">
+      <img src="Images/couds.jpeg" alt="Sun" class="center">
      <div class="text-block">
       <h6>A film by Ayazhan Gabitkyzy</h6>
       <h1>INTO THE SUN</h1>
