--- a/production.html
+++ b/production.html
@@ -11,13 +11,13 @@
   <body>
     <div class="close">
       <a href="index.html">
-      <img src="images/closeyellow.jpeg" alt="close" class="closing">
+      <img src="Images/closeyellow.jpeg" alt="close" class="closing">
       </a>
     </div>
     <h1>Production</h1>
     <div class="director">
         <h2>Director:</h2>
-      <img src="images/ayazhan.jpg" align="left" alt="aya" class="aya">
+      <img src="Images/ayazhan.jpg" align="left" alt="aya" class="aya">
       <h3>Ayazhan Gabitkyzy</h3>
       <p>Ayazhan Gabitkyzy is the current freshman studet at NYUAD. She is from Kazakhstan, born in 2003 and a capricorn sign.It was her first time flying without parents, that's why she wanted to capture one the most important life transitions of her life.</p>
     </div>
@@ -37,7 +37,7 @@
     <br>
 <div class="assistants">
   <h2>Assistants:</h2>
-<img src="images/production.jpg" align="right" alt="friends" class="friends">
+<img src="Images/production.jpg" align="right" alt="friends" class="friends">
 <ul>
   <li>Aruzhan</li>
   <li>Abay</li>
