--- a/synopsis.html
+++ b/synopsis.html
@@ -11,7 +11,7 @@
   <body>
     <div class="close">
       <a href="index.html">
-      <img src="images/closeyellow.jpeg" alt="close" class="closing">
+      <img src="Images/closeyellow.jpeg" alt="close" class="closing">
       </a>
     </div>
     <h1>Synopsis of the film</h1>
@@ -20,19 +20,19 @@
     <div class="slideshow-container">
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
-      <img src="images/plane.jpg" style="width:100%; height:50%;">
+      <img src="Images/plane.jpg" style="width:100%; height:20%;">
       <div class="text">Beginning</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
-      <img src="images/road.jpg" style="width:100%; height:50%;">
+      <img src="Images/road.jpg" style="width:100%; height:20%;">
       <div class="text">Dubai road</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
-      <img src="images/nyuad.jpg" style="width:100%; height:50%;">
+      <img src="Images/nyuad.jpg" style="width:100%; height:20%;">
       <div class="text">NYUAD</div>
     </div>
 
