--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!-- Navigation bar -->
     <div class="topnav" id="myTopnav">
   <a href="index.html" class="active">Home</a>
   <a href="synopsis.html">Synopsis</a>
@@ -18,6 +19,7 @@
     <i class="fa fa-bars"></i>
   </a>
 </div>
+<!-- Javascript for navigation bar -->
 <script>
 function myFunction() {
   var x = document.getElementById("myTopnav");
@@ -28,6 +30,7 @@ function myFunction() {
   }
 }
 </script>
+<!--Main opening ad and link to the video -->
     <div class="film">
       <img src="Images/couds.jpeg" alt="Sun" class="center">
      <div class="text-block">
@@ -37,5 +40,11 @@ function myFunction() {
 
     </div>
     </div>
+    <div class="facts">
+    <h2>Interesting facts</h2>
+    <p>Click the circle tabs to find out interesting facts!</p>
+    </div>
+
+  <div class="iactiveImg" data-ii="31922" style="width=50%"></div><script src="https://interactive-img.com/js/include.js"></script>
   </body>
 </html>
