--- a/production.html
+++ b/production.html
@@ -2,31 +2,30 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> Home Page </title>
+    <title> Production </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="production.css">
   </head>
   <body>
+    <!-- Close icon -->
     <div class="close">
       <a href="index.html">
       <img src="Images/closeyellow.jpeg" alt="close" class="closing">
       </a>
+      <!-- Director description and photo-->
     </div>
     <h1>Production</h1>
     <div class="director">
-        <h2>Director:</h2>
       <img src="Images/ayazhan.jpg" align="left" alt="aya" class="aya">
+      <div class="direct">
+        <h2>Director:</h2>
       <h3>Ayazhan Gabitkyzy</h3>
-      <p>Ayazhan Gabitkyzy is the current freshman studet at NYUAD. She is from Kazakhstan, born in 2003 and a capricorn sign.It was her first time flying without parents, that's why she wanted to capture one the most important life transitions of her life.</p>
+      <p>Ayazhan Gabitkyzy is the current freshman student at NYUAD. She is from Kazakhstan, born in 2003 and a capricorn sign.It was her first time flying without parents, that's why she wanted to capture one the most important life transitions of her life.</p>
     </div>
+      </div>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br><br>
     <br>
     <br>
     <br>
@@ -35,9 +34,12 @@
     <br>
     <br>
     <br>
+
+    <!-- Assistants description and photo-->
 <div class="assistants">
-  <h2>Assistants:</h2>
 <img src="Images/production.jpg" align="right" alt="friends" class="friends">
+<div class="assist">
+  <h2>Assistants:</h2>
 <ul>
   <li>Aruzhan</li>
   <li>Abay</li>
@@ -48,6 +50,7 @@
 </ul>
 <p>Assistants of the director are also freshman NYUAD students from Kazakhstan. Everything was for the first for them too, that's why sharig important steps in their lifes together made them closer. </p>
 <p>P.S. The production process was tiring:)</p>
+</div>
 </div>
   </body>
 </html>
