--- a/watchpage.html
+++ b/watchpage.html
@@ -10,18 +10,16 @@
     <link rel="stylesheet" href="watch.css">
   </head>
   <body>
+    <!-- Close icon -->
     <div class="close">
       <a href="index.html">
       <img src="Images/closeyellow.jpeg" alt="close" class="closing">
       </a>
     </div>
 <h1> INTO THE SUN </h1>
+<!-- Embedded trailer-->
 <div class="video">
-  <video width="500" height="500" controls>
-    <source src="Mymovie.mov" type="video/mp4">
-    <source src="movie.ogg" type="video/ogg">
-    Your browser does not support the video tag.
-  </video>
+    <iframe src="https://drive.google.com/file/d/1yzDJOeB_TVWBnXpA5vmtteRyLR06awFF/preview" width="640" height="480" allow="autoplay"></iframe>
 </div>
 
   </body>
